db-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "db-deployment"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: "db-pod"
    spec:
      containers:
        - name: "db"
          image: "lucassabreu/openshift-mysql-test"
          ports:
            - name: "mysql-port"
              containerPort: 3306
          volumeMounts:
            - name: "mysql-persistent-volume"
              mountPath: "/var/lib/mysql"
      volumes:
        - name: "mysql-persistent-volume"
          persistentVolumeClaim:
            claimName: mysql-pv-claim
